@@ -1,6 +1,8 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - made the exported is_Foo and to_Foo subs much faster, especially for
+          type constraints which can be inlined. (Dave Rolsky)
 
 0.48      2016-12-07 01:15:14Z
         - reverted is_Foo and to_Foo refactoring [from 0.47] for now, so they
@@ -10,7 +12,8 @@ Revision history for MooseX-Types
         - allow type libraries built with MooseX::Types::Combine to be
           combined with MooseX::Types::Combine. (GH #1, Mark Fowler).
         - made the exported is_Foo and to_Foo subs much faster, especially for
-          type constraints which can be inlined [reverted in 0.48]
+          type constraints which can be inlined [reverted in 0.48,
+          reimplemented in 0.49]
 
 0.46      2015-08-16 00:43:46Z
         - make use of Sub::Exporter::ForMethods's new rebless option
